--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-flask==1.1.4
-flask-mysql==1.5.2
+click==7.1.2
+Flask==1.1.4
+Flask-MySQL==1.5.2
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==2.0.1
+PyMySQL==1.0.3
+python-dotenv==1.0.0
 timeago==1.0.15
+Werkzeug==1.0.1
